--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ image: python:latest
 before_script:
   - python -V               # Print out python version for debugging
   - python -m pip install pytest pytest-cov
-  - python -m pip install -f requirements.txt
+  - python -m pip install requirements.txt
 
 test:
   script:
