--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ before_script:
 test:
   script:
   - ls
-  - python -m pytest --cov-report html --cov
+  - python -m pytest --cov # --cov-report html
   - ls
   artifacts:
     paths:
