--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
   - pip install -r requirements_dev.txt
   - pip install -r requirements.txt
 script:
-  - python -m pytest --cov
+  - python -m pytest --cov=diagnostics
