--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
   - pip install -r requirements_dev.txt
   - pip install -r requirements.txt
 script:
-  - python -m pytest --cov=diagnostics
+  #- python -m pytest --cov=diagnostics
+  - tox
 after_success:
   - coveralls
