--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - pip install -r requirements_dev.txt
   - pip install -r requirements.txt
 script:
-  #- python -m pytest --cov=diagnostics
-  - tox
+  - python -m pytest --cov=diagnostics
+  #- tox # TODO: can get tox to work
 after_success:
   - coveralls
