--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
-dist: xenial
 language: python
-python: 3.7.2
+python:
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  - "3.7"
 install:
   - pip install -r requirements_dev.txt
   - pip install -r requirements.txt
