--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,11 @@ matrix:
     - python: 3.7
       dist: xenial
       sudo: true
-      
+
 install:
   - pip install -r requirements_dev.txt
-  - pip install -r requirements.txt
+  - python setup.py install
 script:
-  - python -m pytest --cov=diagnostics
-  #- tox # TODO: can get tox to work
+  - python -m pytest --cov=diagnostics --cov-report html
 after_success:
   - coveralls
