--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
-language: python
-# Existing Python versions
-python:
-  - 3.5
-  - 3.6
+#language: python
+## Existing Python versions
+#python:
+#  - 3.5
+#  - 3.6
 # Enable 3.7 without globally enabling sudo and dist: xenial for other build jobs
 matrix:
   include:
+    - python: 3.5
+    - python: 3.6
     - python: 3.7
       dist: xenial
       sudo: true
@@ -14,6 +16,6 @@ install:
   - pip install -r requirements_dev.txt
   - python setup.py install
 script:
-  - python -m pytest --cov=diagnostics --cov-report html
+  - python -m pytest --cov=diagnostics --cov-report term-missing
 after_success:
   - coveralls
