--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -19,5 +19,6 @@ values =
 search = __version__ = {current_version}
 replace = {new_version}
 
-
-
+[bumpversion:file:setup.py]
+search = version={current_version}
+replace = {new_version}
