--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ install:
   - pip install -r requirements_dev.txt
   - python setup.py install
 script:
-  - python -m pytest --cov=diagnostics --cov-report term-missing
+  - python setup.py test -a "--verbose"
 after_success:
   - coveralls
