--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
 install:
   - pip install -r requirements_dev.txt
   - pip install -r requirements.txt
-  - python setup.py install --no-binaries
+  - pip install . --no-binaries
 script:
   - python setup.py test -a "--verbose"
 after_success:
