Added sphinx + quickstart for docs

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -19,6 +19,10 @@ values =
 search = __version__ = {current_version}
 replace = {new_version}
 
+[bumpversion:file:docs/conf.py]
+search = release = {current_version}
+replace = {new_version}
+
 [bumpversion:file:setup.py]
 search = version={current_version}
 replace = {new_version}
