updated setup.cfg to include license

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,10 @@ test=pytest
 
 [tool:pytest]
 addopts = --cov-report html --cov=diagnostics
+
+[metadata]
+description-file=README.md
+license_files=LICENSE
+
+[bdist_wheel]
+universal = 1
