--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.3.4
+current_version = 0.3.5rc
 commit = True
 message = Bump version: {current_version} --> {new_version}
 tag = True
