--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.3.8
+current_version = 0.3.9rc
 commit = True
 message = Bump version: {current_version} --> {new_version}
 tag = True
